<resources>
    <string name="app_name">PoleIObjetosc</string>
    <string name="POLA">POLA</string>
    <string name="OBJĘTOŚĆ">OBJĘTOŚĆ</string>
    <string name="title_activity_pola">PolaActivity</string>
    <string name="TRÓJKĄT">TRÓJKĄT</string>
    <string name="KWADRAT">KWADRAT</string>
    <string name="PROSTOKĄT">PROSTOKĄT</string>
    <string name="ROMB">ROMB</string>
    <string name="RÓWNOLEGŁOBOK">RÓWNOLEGŁOBOK</string>
    <string name="TRAPEZ">TRAPEZ</string>
    <string name="title_activity_objetosc">ObjetoscActivity</string>
    <string name="SZEŚCIAN">SZEŚCIAN</string>
    <string name="PROSTOPADŁOŚCIAN">PROSTOPADŁOŚCIAN</string>
    <string name="GRANIASTOSŁUP">GRANIASTOSŁUP</string>
    <string name="title_activity_trojkat">TrojkatActivity</string>
    <string name="długośća">długość a</string>
    <string name="wysokośćh">wysokość h</string>
    <string name="wynik">wynik</string>
    <string name="oblicz">OBLICZ</string>
    <string name="title_activity_kwadrat">KwadratActivity</string>
    <string name="title_activity_prostokat">ProstokatActivity</string>
    <string name="szerokoscb">szerokość b</string>
    <string name="title_activity_romb">Romb</string>
    <string name="przekatnad1">przekątna d1</string>
    <string name="przekatnad2">przekątna d2</string>
    <string name="title_activity_rownoleglobok">Równoległobok</string>
    <string name="title_activity_trapez">Trapez</string>
    <string name="podstawaa">podstawa a</string>
    <string name="podstawab">podstawa b</string>
    <string name="title_activity_szescian">Sześcian</string>
    <string name="title_activity_prostopadloscian">Prostopadłościan</string>
    <string name="wysokoscc">wysokość c</string>
    <string name="title_activity_graniastoslup">Graniastosłup</string>
    <string name="polepodstawypp">pole podstawy Pp</string>
    <string name="wysokoscH">wysokość H</string>
    <string name="createdby">created by</string>
    <string name="jedisebas">JediSebas</string>
    <string name="FIZYKA">FIZYKA</string>
</resources>
