<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.jedisebas.poleiobjetosc.ObjetoscActivity"
    tools:showIn="@layout/activity_objetosc">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/SZEŚCIAN"
        android:id="@+id/szescianBtn"
        android:onClick="click"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/PROSTOPADŁOŚCIAN"
        android:id="@+id/prostopadloscianBtn"
        android:onClick="click"
        android:layout_below="@+id/szescianBtn"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/GRANIASTOSŁUP"
        android:id="@+id/graniastoslupBtn"
        android:onClick="click"
        android:layout_below="@+id/prostopadloscianBtn"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
