<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.jedisebas.poleiobjetosc.ProstopadloscianActivity"
    tools:showIn="@layout/activity_prostopadloscian">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/długośća"
        android:id="@+id/dlugoscaPros"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="51dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/szerokoscb"
        android:id="@+id/szerokoscbPros"
        android:layout_below="@+id/dlugoscaPros"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="41dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/wysokoscc"
        android:id="@+id/wysokosccPros"
        android:layout_below="@+id/szerokoscbPros"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="39dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/oblicz"
        android:id="@+id/obliczPros"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/wynik"
        android:id="@+id/wynikPros"
        android:layout_marginTop="64dp"
        android:layout_below="@+id/obliczPros"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dlugoscaProsp"
        android:layout_alignBottom="@+id/dlugoscaPros"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/szerokoscbPros"
        android:layout_toEndOf="@+id/szerokoscbPros" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/szerokoscbProsp"
        android:layout_above="@+id/wysokosccPros"
        android:layout_alignRight="@+id/dlugoscaProsp"
        android:layout_alignEnd="@+id/dlugoscaProsp"
        android:layout_toRightOf="@+id/szerokoscbPros"
        android:layout_toEndOf="@+id/szerokoscbPros" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/wysokosccProsp"
        android:layout_alignBottom="@+id/wysokosccPros"
        android:layout_alignRight="@+id/szerokoscbProsp"
        android:layout_alignEnd="@+id/szerokoscbProsp"
        android:layout_toRightOf="@+id/szerokoscbPros"
        android:layout_toEndOf="@+id/szerokoscbPros" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/wynikProsp"
        android:layout_alignBottom="@+id/wynikPros"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/wysokosccProsp"
        android:layout_alignStart="@+id/wysokosccProsp" />

</RelativeLayout>
