<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.jedisebas.poleiobjetosc.TrojkatActivity"
    tools:showIn="@layout/activity_trojkat">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/podstawaa"
        android:id="@+id/podstawaaT"
        android:layout_marginTop="44dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/wysokośćh"
        android:id="@+id/wysokoschT"
        android:layout_marginTop="43dp"
        android:layout_below="@+id/podstawaaT"
        android:layout_alignLeft="@+id/podstawaaT"
        android:layout_alignStart="@+id/podstawaaT" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/podstawaaTp"
        android:layout_above="@+id/wysokoschT"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/wynikT"
        android:layout_alignStart="@+id/wynikT" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/wysokoschTp"
        android:layout_alignBottom="@+id/wysokoschT"
        android:layout_toRightOf="@+id/wysokoschT"
        android:layout_alignRight="@+id/podstawaaTp"
        android:layout_alignEnd="@+id/podstawaaTp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/wynik"
        android:id="@+id/wynik"
        android:layout_marginTop="53dp"
        android:layout_below="@+id/obliczT"
        android:layout_alignLeft="@+id/wysokoschT"
        android:layout_alignStart="@+id/wysokoschT" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/oblicz"
        android:id="@+id/obliczT"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/wynikT"
        android:layout_alignBottom="@+id/wynik"
        android:layout_toRightOf="@+id/wysokoschT"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
