<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.jedisebas.poleiobjetosc.RombActivity"
    tools:showIn="@layout/activity_romb">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/przekatnad1"
        android:id="@+id/przekatnad1R"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="44dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/przekatnad1Rp"
        android:layout_alignBottom="@+id/przekatnad1R"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/przekatnad1R"
        android:layout_toEndOf="@+id/przekatnad1R" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/przekatnad2"
        android:id="@+id/przekatnad2R"
        android:layout_below="@+id/przekatnad1R"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="37dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/przekatnad2Rp"
        android:layout_alignBottom="@+id/przekatnad2R"
        android:layout_alignRight="@+id/przekatnad1Rp"
        android:layout_alignEnd="@+id/przekatnad1Rp"
        android:layout_alignLeft="@+id/przekatnad1Rp"
        android:layout_alignStart="@+id/przekatnad1Rp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/oblicz"
        android:id="@+id/obliczR"
        android:onClick="onClick"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/wynik"
        android:id="@+id/wynikR"
        android:layout_below="@+id/obliczR"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="55dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/wynikRp"
        android:layout_alignBottom="@+id/wynikR"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/przekatnad2Rp"
        android:layout_alignStart="@+id/przekatnad2Rp" />
</RelativeLayout>
