<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.jedisebas.poleiobjetosc.GraniastoslupActivity"
    tools:showIn="@layout/activity_graniastoslup">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/polepodstawypp"
        android:id="@+id/polepodstawyGran"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="41dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/wysokoscH"
        android:id="@+id/wysokoscHGran"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/polepodstawyGran"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/polepodstawyGranp"
        android:layout_above="@+id/wysokoscHGran"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/polepodstawyGran"
        android:layout_toEndOf="@+id/polepodstawyGran" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/wysokoscHGranp"
        android:layout_alignBottom="@+id/wysokoscHGran"
        android:layout_alignRight="@+id/polepodstawyGranp"
        android:layout_alignEnd="@+id/polepodstawyGranp"
        android:layout_alignLeft="@+id/polepodstawyGranp"
        android:layout_alignStart="@+id/polepodstawyGranp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/oblicz"
        android:id="@+id/obliczGran"
        android:layout_below="@+id/wysokoscHGran"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="97dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/wynik"
        android:id="@+id/wynikGran"
        android:layout_marginTop="80dp"
        android:layout_below="@+id/obliczGran"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/wynikGranp"
        android:layout_alignBottom="@+id/wynikGran"
        android:layout_alignLeft="@+id/wysokoscHGranp"
        android:layout_alignStart="@+id/wysokoscHGranp"
        android:layout_alignRight="@+id/wysokoscHGranp"
        android:layout_alignEnd="@+id/wysokoscHGranp" />
</RelativeLayout>
